DMP-4250: Remove th padding to fix table alignment (#1690)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,7 +33,6 @@ table:not(.moj-datepicker__calendar) {
   }
   td,
   th {
-    padding-left: 10px !important;
     vertical-align: middle !important;
   }
 }
